<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Barra superior com fundo roxo e título centralizado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_purple"
        android:gravity="center">

        <TextView
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <!-- Subtítulo centralizado com estilo em negrito -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <TextView
            android:text="@string/tituloCima"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/titulos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <!-- Área principal com elementos centralizados verticalmente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Campo para entrada do nome -->
        <EditText
            android:id="@+id/nomeEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="name"
            android:hint="@string/nomeHint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <!-- Campo para entrada do email -->
        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <!-- Botão para realizar login -->
        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/loginText"
            android:textColor="@color/white" />

        <!-- Botão para realizar cadastro -->
        <Button
            android:id="@+id/cadastro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cadastroText"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
