<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_conteudos"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Botão de imagem utilizado para exibir um ícone ou visual representativo -->
    <ImageButton
        android:id="@+id/btnImagem"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:background="@null"
        android:src="@drawable/placeholder"
        />

    <!-- Container para informações textuais do conteúdo -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="2dp">

        <!-- Título do conteúdo em texto destacado -->
        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tituloPH"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <!-- Nome do criador do conteúdo -->
        <TextView
            android:id="@+id/txtCriador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criadorPH"
            android:textSize="14sp"
            android:textColor="@color/texts_conteudos" />

    </LinearLayout>

    <!-- Botão para adicionar o conteúdo -->
    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/addButtonP"
        android:padding="2dp" />
</LinearLayout>
