<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_conteudos"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Botão de imagem para exibir um ícone ou visual associado -->
    <ImageButton
        android:id="@+id/imageButtonIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:background="@null"
        android:src="@drawable/placeholder" />

    <!-- Seção que contém informações textuais -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nome da playlist exibido em texto -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/nomePlay"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="1dp"
            android:textColor="@color/black"/>

        <!-- Texto de descrição ou subtítulo da playlist -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomePlayHint"
            android:textSize="16sp"
            android:textColor="@color/texts_conteudos"
            android:paddingTop="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <!-- Botão para adicionar itens -->
    <Button
        android:id="@+id/btnAdicionar"
        android:importantForAccessibility="no"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/addButtonP"
        android:padding="0dp" />
</LinearLayout>
