<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/minhasPlaylists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Barra roxa no topo com o nome do aplicativo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_purple"
        android:gravity="center">

        <!-- Título do aplicativo -->
        <TextView
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </LinearLayout>

    <!-- Seção com o nome do usuário e botões de playlist -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Nome do usuário (ou título de playlists) -->
        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/minhaplaylist"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/titulos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <!-- Botões para criar e apagar playlists -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Botão para criar uma nova playlist -->
            <Button
                android:id="@+id/criarPlaylist"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/criarplaylist"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>

            <!-- Botão para apagar uma playlist existente -->
            <Button
                android:id="@+id/apagarPlaylist"
                android:layout_width="160dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/apagarplaylist"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <!-- RecyclerView para exibir a lista de playlists -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlaylists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>
