<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/minhasPlaylists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Barra roxa no topo com o nome do app -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_purple"
        android:gravity="center">

        <!-- Título do app -->
        <TextView
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </LinearLayout>

    <!-- Seção do nome do usuário e botões -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Nome do usuário -->
        <TextView
            android:id="@+id/meuUsuario"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/titulos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <!-- Botões de interação -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <!-- Botão para visualizar a minha playlist -->
            <Button
                android:id="@+id/minhaPlaylistVer"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/minhaplaylist"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>

            <!-- Botão para acessar outras playlists -->
            <Button
                android:id="@+id/playlist"
                android:layout_width="160dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/playlist"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <!-- RecyclerView para exibir os conteúdos das playlists -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewConteudos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

</LinearLayout>
